<resources>
    <string name="app_name">BringOn</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Signin -->
    <string name="hint_login">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_username">Nome</string>
    <string name="btn_login">ENTRAR</string>
    <string name="btn_reg">CADASTRAR</string>
    <string name="btn_reg_facebook">CADASTRAR COM FACEBOOK</string>
    <string name="btn_signup">CADASTRAR</string>
    <string name="btn_facebook">ENTRAR COM FACEBOOK</string>
    <string name="new_user"><![CDATA[Novo usuário? <u>Cadastre-se</u>]]></string>

    <string name="action_settings">Settings</string>
    <string name="go_signin"><![CDATA[Ja tem uma conta? <u>Entre</u>]]></string>
    <string name="radio_store">Loja</string>
    <string name="radio_cliente">Cliente</string>
    <string name="settings">Configurações</string>
    <string name="share">Compartilhar</string>
    <string name="sign_out">Sair</string>
    <string name="markets">Mercados</string>
    <string name="my_market">Meu mercado</string>
    <string name="my_account">Minha conta</string>
    <string name="my_carts">Meus carrinhos</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce posuere nibh id lacus commodo, eget venenatis leo vehicula. Cras mollis, elit scelerisque pulvinar viverra, velit diam semper augue, sed blandit purus felis nec dolor. Pellentesque ut felis in nisi aliquam lacinia. Aliquam ac lectus auctor, facilisis tellus et, tincidunt velit. Duis mollis, turpis et efficitur vulputate, nisi nibh consectetur metus, eget blandit neque nisl nec diam. Nullam et tellus id nunc rhoncus aliquet eu in metus. Phasellus semper congue velit, et accumsan libero rutrum id. Sed viverra lacinia nulla. Quisque molestie, arcu eu aliquam fringilla, ante lectus pharetra erat, quis convallis ligula quam id orci. Donec imperdiet libero in magna volutpat bibendum. Ut congue tortor id gravida imperdiet. Praesent eget turpis nibh. Phasellus tincidunt pellentesque sollicitudin.
Pellentesque sapien arcu, laoreet hendrerit purus non, efficitur accumsan ante. Integer id erat enim. Nullam elementum mi vitae vehicula sodales. Quisque vel placerat est. Quisque vehicula, ipsum nec finibus tincidunt, lectus justo efficitur arcu, sed pellentesque ipsum mi eget risus. Proin auctor nulla at est viverra, sit amet faucibus magna gravida. Nullam eu augue vitae orci ornare mattis. Vivamus varius et tellus a feugiat. Duis id neque eget felis luctus malesuada. In nulla turpis, scelerisque eget mattis rutrum, congue quis velit. Ut ultrices orci lectus, accumsan egestas lacus iaculis eu.</string>
    <string name="title_info_market">Dados do comércio</string>
    <string name="hint_name">Nome</string>
    <string name="hint_phone">Telefone</string>
    <string name="txt_open">Aberto</string>
    <string name="txt_location">Localização</string>
    <string name="txt_title">Título</string>
    <string name="txt_products">Produtos</string>
    <string name="txt_orders_in_progress">Pedidos em andamento</string>
    <string name="txt_sales">Vendas</string>
    <string name="txt_sales_history">Histórico de vendas</string>
    <string name="txt_addresses">Endereços</string>
    <string name="title_profile">Meu perfil</string>
    <string name="hint_email">E-mail</string>
    <string name="txt_change_password">Trocar senha</string>

    <string name="conta_criada">Conta criada com sucesso!</string>

    <string name="title_products">Produtos</string>


</resources>
