<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@mipmap/ic_shopping_black_24dp"
            android:title="@string/markets" />
        <item
            android:id="@+id/nav_carts"
            android:icon="@mipmap/ic_cart_black_24dp"
            android:title="@string/my_carts" />
        <item
            android:id="@+id/nav_market"
            android:icon="@mipmap/ic_store_black_24dp"
            android:title="@string/my_market" />
        <item
            android:id="@+id/nav_account"
            android:icon="@mipmap/ic_account_black_24dp"
            android:title="@string/my_account" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_share_variant_black_24dp"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@mipmap/ic_logout_black_24dp"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
