<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:row_view="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_half"
            card_view:cardCornerRadius="@dimen/round_default">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_half"
                    android:text="@string/title_info_market"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_half_default"
                    android:layout_marginRight="@dimen/margin_half_default" >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_half_default"
                    android:layout_marginRight="@dimen/margin_half_default">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone"/>
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cell_default"
                    android:paddingLeft="@dimen/margin_default"
                    android:paddingRight="@dimen/margin_default" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_medium"
                        android:layout_centerVertical="true"
                        android:text="@string/txt_open"/>
                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/compatSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_grey_300"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"/>
                <br.com.pedrosousa.bringon.widget.RowView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    row_view:label="@string/txt_location"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_grey_300"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_half"
            card_view:cardCornerRadius="@dimen/round_default">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_half"
                    android:text="@string/txt_sales"/>
                <br.com.pedrosousa.bringon.widget.RowView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    row_view:label="@string/txt_products"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_grey_300"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"/>
                <br.com.pedrosousa.bringon.widget.RowView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    row_view:label="@string/txt_orders_in_progress"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_grey_300"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"/>
                <br.com.pedrosousa.bringon.widget.RowView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    row_view:label="@string/txt_sales_history"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>