<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:row_view="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:icon_text_input_layout="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@android:drawable/sym_def_app_icon"
                android:layout_marginTop="@dimen/margin_half_large"
                android:layout_marginBottom="@dimen/margin_default"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_half"
                card_view:cardCornerRadius="@dimen/round_default">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_half"
                        android:text="@string/title_profile"/>
                    <br.com.pedrosousa.bringon.widget.IconTextInputLayout
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        icon_text_input_layout:txt_hint="@string/hint_name"
                        icon_text_input_layout:icon_txt_input="@mipmap/ic_account_grey600_24dp"/>
                    <br.com.pedrosousa.bringon.widget.IconTextInputLayout
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        icon_text_input_layout:txt_hint="@string/hint_email"
                        icon_text_input_layout:icon_txt_input="@mipmap/ic_email_grey600_24dp"/>
                    <br.com.pedrosousa.bringon.widget.IconTextInputLayout
                        android:id="@+id/input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        icon_text_input_layout:txt_hint="@string/hint_phone"
                        icon_text_input_layout:icon_txt_input="@mipmap/ic_phone_grey600_24dp"/>

                    <br.com.pedrosousa.bringon.widget.RowView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        row_view:label="@string/txt_change_password"
                        row_view:icon_row="@mipmap/ic_key_grey600_24dp"/>
                    <View style="@style/Divider"/>
                    <br.com.pedrosousa.bringon.widget.RowView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        row_view:label="@string/txt_addresses"
                        row_view:icon_row="@mipmap/ic_map_marker_grey600_24dp"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
